[Fix] Fix bad vertical align of text

--- a/statics/css/style_v2.sass
+++ b/statics/css/style_v2.sass
@@ -143,7 +143,7 @@ form
     display: inline-block
     height: 35px !important
     font-size: 20px
-    line-height: 35px
+    line-height: 20px
     text-decoration: none
     text-align: center
     padding: 5px 5px
@@ -207,7 +207,7 @@ form
 
 .btn-sm
     font-size: 15px
-    line-height: 20px !important
+    line-height: 15px !important
     height: 20px !important
 
 footer
